--- a/vplusconfig.json
+++ b/vplusconfig.json
@@ -725,6 +725,11 @@
 				"defaultValue": "false",
 				"defaultType": "bool"
 			},
+			"noTeleportPreventionOnlyAllowsIngots": {
+				"description": "Overwrites noTeleportPrevention to only allow ingots",
+				"defaultValue": "true",
+				"defaultType": "bool"
+			},
 			"baseItemWeightReduction": {
 				"description": "Increase or reduce item weight by % percent. The value -50 will reduce item weight of every object by 50%.",
 				"defaultValue": "0",
