--- a/valheim_plus.cfg
+++ b/valheim_plus.cfg
@@ -393,6 +393,9 @@ enabled=false
 ; Enables you to teleport with ores and other usually teleport restricted objects.
 noTeleportPrevention=false
 
+; Overwrites noTeleportPrevention to only allow ingots
+noTeleportPreventionOnlyAllowsIngots=true
+
 ; Increase or reduce item weight by a modifier in percent. 
 ; The value -50 will reduce item weight of every object by 50%, 50 will increase the weight of every item by 50%.
 baseItemWeightReduction=0
